css/style.css
/* Made using New Event template: http://www.templatemo.com/tm-486-new-event */

body {
	background: #ffffff;
	font-family: 'Roboto', sans-serif;
	font-style: normal;
	font-weight: 400;

}
/*---------------------------------------
    Typography              
-----------------------------------------*/
h1 {
	font-size: 40px;
	letter-spacing: 2px;
}

h2 {
  font-size: 30px;
  text-transform: uppercase;
}

h3 {
  line-height: 36px;
}

h5 {
	letter-spacing: 1px;
	padding-top: 10px;
}

p {
	color: #808080;
	font-size: 14px;
	line-height: 24px;
}

a {
  text-decoration: none !important;
  outline: none;
}


/*---------------------------------------
    General               
-----------------------------------------*/
.section-title {
  margin-bottom: 32px;
}

#overview {
	padding-top: 5rem;
  padding-bottom: 5rem;
}

#detail, footer {
    padding-top: 10rem;
    padding-bottom: 10rem;
}

#detail, footer {
  text-align: center;
}

#overview h3, #detail h3, #partners h3, #about h3 {
    padding-bottom: 12px;
}

#intro .btn, #pulsHero .btn,
#detail .btn, #about .btn {
    background: transparent;
    border: 2px solid #ffffff;
    border-radius: 0px;
    color: #ffffff;
    font-weight: 600;
    letter-spacing: 1px;
    font-size: 12px;
    padding: 14px 42px;
    margin-top: 42px;
    /*margin-right: 12px;*/
    -webkit-transition: all 0.4s ease-in-out;
    transition: all 0.4s ease-in-out;
}

#intro .btn-danger, #pulsHero .btn-danger,
#detail .btn-danger, #about .btn-danger {
    background: #66ccff;
    border-color: transparent;
}

#detail .btn, #about .btn {
  border-radius: 100px;
}

#intro .btn-danger:hover,
#pulsHero .btn-danger:hover,
#detail .btn-danger:hover,
#about .btn-danger:hover {
  background: transparent;
  border-color: #66ccff;
  color: #66ccff;
}


#intro .btn-default:hover {
    background: #ffffff;
    color: #333333;
    border-color: transparent;
}

.parallax-section {
  background-attachment: fixed !important;
  background-size: cover !important;
}

/*---------------------------------------
    Preloader section              
-----------------------------------------*/
.preloader {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 99999;
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  align-items: center;
  background: none repeat scroll 0 0 #ffffff;
}

.sk-rotating-plane {
  width: 50px;
  height: 50px;
  background-color: #222;
  -webkit-animation: sk-rotatePlane 1.2s infinite ease-in-out;
          animation: sk-rotatePlane 1.2s infinite ease-in-out; }

@-webkit-keyframes sk-rotatePlane {
  0% {
    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg);
            transform: perspective(120px) rotateX(0deg) rotateY(0deg); }
  50% {
    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
            transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg); }
  100% {
    -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
            transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg); } }

@keyframes sk-rotatePlane {
  0% {
    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg);
            transform: perspective(120px) rotateX(0deg) rotateY(0deg); }
  50% {
    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
            transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg); }
  100% {
    -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
            transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg); } }



/*---------------------------------------
    Navigation Links section              
-----------------------------------------*/
.custom-navbar {
	margin-bottom: 0;
	background-color: #101010;
	max-height: 100%;
}

.custom-navbar .navbar-brand {
	height: auto;
	width: auto;
	max-height: 70px;
	max-width: 400px;
	line-height: 35px; 
	vertical-align: middle;
}

.custom-navbar .nav li a {
	color: #ddd;
	font-size: 12px;
	font-weight: 500;
	letter-spacing: 0.6px;
	text-transform: uppercase;
	line-height: 40px;
	transition: all 0.4s ease-in-out;
}

.custom-navbar .nav li a:hover {
    background: transparent;
    color: #00de0b;
}

.custom-navbar .navbar-nav > li > a:hover,
.custom-navbar .navbar-nav > li > a:focus {
	background-color: transparent;
}

.custom-navbar .nav li.active > a {
	background-color: transparent;
	color: #00de0b;
}

.custom-navbar .navbar-toggle {
    border: none;
    padding-top: 10px;
}

.custom-navbar .navbar-toggle {
	background-color: transparent;
}

.custom-navbar .navbar-toggle .icon-bar {
    background: #ffffff;
    border-color: transparent;
}

@media(min-width:768px) {
    .custom-navbar {
        padding: 20px 0;
        border-bottom: 0;
        background: 0 0; 
    }
    .custom-navbar.top-nav-collapse {
        background: #101010;
        padding: 0;
    }
}

/*---------------------------------------
    Intro section              
-----------------------------------------*/
#intro {
    background: url('../images/intro.jpg') 50% 0 repeat-y fixed;
    -webkit-background-size: cover;
    background-size: cover;
    background-position: center center;
    color: #ffffff;
    display: -webkit-box;
    display: -webkit-flex;
     display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
     -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
    height: 100vh;
    text-align: center;
}

#intro h3 {
  letter-spacing: 2px;
}

/*---------------------------------------
    Pulse section              
-----------------------------------------*/
#pulsHero {
    background: url('../../images/pulsHero.jpg') 50% 0 repeat-y fixed;
    -webkit-background-size: cover;
    background-size: cover;
    background-position: center center;
    color: #ffffff;
    display: -webkit-box;
    display: -webkit-flex;
     display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
     -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
    height: 100vh;
    text-align: right;
}

#pulsHero h2 {
	color: #66ccff
}
/*---------------------------------------
   Overview  section              
-----------------------------------------*/
.zpat {
	padding-top: 32px;
	padding-bottom: 32px;
}

.zpat img {
	display: block;
	margin-left: auto;
	margin-right: auto;
	max-height: 400px;
	max-width: 1200px;
}

/*---------------------------------------------
		About Partners
---------------------------------------------*/

#about {
	background: url('../images/contact-bg.jpg') 50% 0 repeat-y fixed;
	background-size: cover;
	background-position: center center;
	color: #101010;
	padding-top: 5rem;
	padding-bottom: 5rem;
}

@media (max-width: 992px) {
  .features-item {
    margin-bottom: 45px;
  }
}

.features-item {
  border-radius: 5px;
  padding: 60px 30px;
  text-align: center;
	background: rgba(161, 161, 161, 0.42);
  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
}

.features-item h2 {
  z-index: 9;
  position: absolute;
  top: 15px;
  left: 45px;
  font-size: 100px;
  font-weight: 600;
  color: #fdefe9;
}

.features-item img {
  z-index: 10;
  position: relative;
  max-width: 100%;
  margin-bottom: 40px;
}

.features-item h4 {
  margin-top: 0px;
  font-size: 22px;
  color: #1e1e1e;
  margin-bottom: 25px;
}

.features-item .btn-danger {
  margin-top: 35px;
  display: inline-block;
}

/*---------------------------------------------
		Testimonials
---------------------------------------------*/

#testimonials {
  /*padding: 100px 0px;*/
  position: relative;
  z-index: 9;
	color: #101010;
}

#testimonials h1 {
	text-align: center;
}

@media (max-width: 992px) {
  .quoteBox {
    margin-bottom: 45px;
  }
}

.quoteBox {
  border-radius: 5px;
  padding: 60px 30px;
	background: #e0e0e0;
  /*box-shadow: 0px 0px 10px rgba(0,0,0,0.1);*/
}


.quoteBox img {
  z-index: 10;
  position: relative;
  max-width: 100%;
  margin-bottom: 40px;
}

.quoteBox h4 {
  margin-top: 0px;
  font-size: 22px;
  color: #ffffff;
  margin-bottom: 25px;
}

/*---------------------------------------
    Detail section              
-----------------------------------------*/
#detail {
    background: #222;
    color: #ffffff;
}

#icon {
  color: #66ccff;
	font-size: 48px;
}

/*---------------------------------------
   Partners section              
-----------------------------------------*/
#partners {
	padding-top: 5rem;
	padding-bottom: 5rem;
	color: #111;
}

#partners img {
  margin-top: 18px;
}

#partners h3 {
	margin-bottom: 5rem;
}

#iconPa {
	font-size: 48px;
}

/*---------------------------------------
   Footer section              
-----------------------------------------*/
footer {
  background-attachment: fixed;
}

/* Back top */
.go-top {
  background-color: #222;
  bottom: 2em;
  right: 2em;
  color: #ffffff;
  font-size: 32px;
  display: none;
  position: fixed;
  text-decoration: none;
  width: 60px;
  height: 60px;
  line-height: 60px;
  text-align: center;
  transition: all 0.4s ease-in-out;
}

.go-top:hover {
    background: #66ccff/*#00de0b*/;
    color: #ffffff;
}

/*---------------------------------------
   Responsive styles            
-----------------------------------------*/
@media (max-width: 980px) {

  p {font-size: 13px;}

  .custom-navbar .navbar-brand {
    font-size: 2rem;
  }

  .custom-navbar .nav li a {
		font-size: 11px;
		line-height: 20px;
  }

  #intro { height: 65vh; }

  #video iframe {
    margin-top: 42px;
  }

  #contact .contact_detail {
  background: #ffffff;
  padding: 10rem 3rem 10rem 5rem;
}

}

@media (max-width: 768px) {

  .custom-navbar .navbar-brand {
    line-height: 20px;
  }

  #overview img,
  #detail .col-md-4 {
    padding-top: 32px;
  }

  .nav-tabs > li > a {
    font-size: 13px;
  }

}

@media (max-width: 760px) {

  #intro {
    height: 100vh;
  }

}

